Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33110

Crash when finishing wizard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 17.0.1
    • Qt Creator 17.0.0
    • None
    • MacOS Sonoma 14.7.6
      Qt Creator 17.0.0
    • 5dd5f89b8 (17.0)

      Just got crash without any reason. See report in attached file.

        1. crash_report.rtf
          151 kB
          Alexandr KIRILOV
        2. Screenshot 2025-06-23 at 10.37.31.png
          55 kB
          Alexandr KIRILOV
        For Gerrit Dashboard: QTCREATORBUG-33110
        # Subject Branch Project Status CR V

            con Eike Ziller
            bogong Alexandr KIRILOV
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes