Wizards: Fix crash when reading file fails

When something goes wrong with e.g. reading a wizard template's file.

Amends f97a62b62043cb21296c7d1acb89b83e7ff8a9dd

Fixes: QTCREATORBUG-33110
Change-Id: Id814fb24ba033f8efa872873705ae175a18bd084
Reviewed-by: Christian Stenger <christian.stenger@qt.io>